{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 35,
  "lineage": "c44beda1-e0b7-ee86-290a-2a1da6d71889",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891376960967:loadbalancer/app/mrolive-alb-alb/fb5d1185bfa922c6",
            "arn_suffix": "app/mrolive-alb-alb/fb5d1185bfa922c6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mrolive-alb-alb-65482432.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891376960967:loadbalancer/app/mrolive-alb-alb/fb5d1185bfa922c6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mrolive-alb-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-092473d1409813d54"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-010c75a5cb162e0ce"
              },
              {
                "subnet_id": "subnet-02226868444e7cfd2"
              }
            ],
            "subnets": [
              "subnet-010c75a5cb162e0ce",
              "subnet-02226868444e7cfd2"
            ],
            "tags": {
              "Name": "mrolive-alb-alb"
            },
            "tags_all": {
              "Name": "mrolive-alb-alb"
            },
            "vpc_id": "vpc-082c137d8bdade3e0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.default",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891376960967:listener/app/mrolive-alb-alb/fb5d1185bfa922c6/640a7dfa6ff96f0e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891376960967:targetgroup/mrolive-alb-tg/00d233678a712327",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891376960967:listener/app/mrolive-alb-alb/fb5d1185bfa922c6/640a7dfa6ff96f0e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891376960967:loadbalancer/app/mrolive-alb-alb/fb5d1185bfa922c6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.target_group",
            "module.network.aws_security_group.default",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891376960967:targetgroup/mrolive-alb-tg/00d233678a712327",
            "arn_suffix": "targetgroup/mrolive-alb-tg/00d233678a712327",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891376960967:targetgroup/mrolive-alb-tg/00d233678a712327",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mrolive-alb-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "mrolive-alb-tg"
            },
            "tags_all": {
              "Name": "mrolive-alb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-082c137d8bdade3e0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:security-group/sg-0eba63b3f9bf250c9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eba63b3f9bf250c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mrolive-alb-alb-sg20241227193156135200000005",
            "name_prefix": "mrolive-alb-alb-sg",
            "owner_id": "891376960967",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mrolive-alb-alb-sg"
            },
            "tags_all": {
              "Name": "mrolive-alb-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-082c137d8bdade3e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062e2d30e40a528a1",
            "arn": "arn:aws:ec2:us-east-1:891376960967:elastic-ip/eipalloc-062e2d30e40a528a1",
            "domain": "vpc",
            "id": "eipalloc-062e2d30e40a528a1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-238-30-254.compute-1.amazonaws.com",
            "public_ip": "34.238.30.254",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mrolive-vpc-nat-eip-0"
            },
            "tags_all": {
              "Name": "mrolive-vpc-nat-eip-0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6d6c81192ffb69e",
            "arn": "arn:aws:ec2:us-east-1:891376960967:elastic-ip/eipalloc-0b6d6c81192ffb69e",
            "domain": "vpc",
            "id": "eipalloc-0b6d6c81192ffb69e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-202-249-82.compute-1.amazonaws.com",
            "public_ip": "52.202.249.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mrolive-vpc-nat-eip-1"
            },
            "tags_all": {
              "Name": "mrolive-vpc-nat-eip-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:internet-gateway/igw-0a0e2c0f94f494ef4",
            "id": "igw-0a0e2c0f94f494ef4",
            "owner_id": "891376960967",
            "tags": {
              "Name": "mrolive-vpc-igw"
            },
            "tags_all": {
              "Name": "mrolive-vpc-igw"
            },
            "vpc_id": "vpc-082c137d8bdade3e0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062e2d30e40a528a1",
            "association_id": "eipassoc-0fdd48f326534e16c",
            "connectivity_type": "public",
            "id": "nat-00ae082e0367ef033",
            "network_interface_id": "eni-037679042391e1651",
            "private_ip": "10.0.1.58",
            "public_ip": "34.238.30.254",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02226868444e7cfd2",
            "tags": {
              "Name": "mrolive-vpc-nat-gateway-0"
            },
            "tags_all": {
              "Name": "mrolive-vpc-nat-gateway-0"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6d6c81192ffb69e",
            "association_id": "eipassoc-0442395ba747ed107",
            "connectivity_type": "public",
            "id": "nat-0a8f3fc9e3cf92a1d",
            "network_interface_id": "eni-0cc327146d2db6cf9",
            "private_ip": "10.0.2.60",
            "public_ip": "52.202.249.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-010c75a5cb162e0ce",
            "tags": {
              "Name": "mrolive-vpc-nat-gateway-1"
            },
            "tags_all": {
              "Name": "mrolive-vpc-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a0e2c0f94f494ef4",
            "id": "r-rtb-04b2a54fa15a3435a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04b2a54fa15a3435a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e55682f71b0c25181080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00ae082e0367ef033",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e55682f71b0c2518",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07cdf98b1941067301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a8f3fc9e3cf92a1d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07cdf98b194106730",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:route-table/rtb-0e55682f71b0c2518",
            "id": "rtb-0e55682f71b0c2518",
            "owner_id": "891376960967",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mrolive-vpc-private-rt-0"
            },
            "tags_all": {
              "Name": "mrolive-vpc-private-rt-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-082c137d8bdade3e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:route-table/rtb-07cdf98b194106730",
            "id": "rtb-07cdf98b194106730",
            "owner_id": "891376960967",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mrolive-vpc-private-rt-1"
            },
            "tags_all": {
              "Name": "mrolive-vpc-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-082c137d8bdade3e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:route-table/rtb-04b2a54fa15a3435a",
            "id": "rtb-04b2a54fa15a3435a",
            "owner_id": "891376960967",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mrolive-vpc-public-rt"
            },
            "tags_all": {
              "Name": "mrolive-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-082c137d8bdade3e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058ca6ff53eaad420",
            "route_table_id": "rtb-0e55682f71b0c2518",
            "subnet_id": "subnet-01f5ac8cc96fbd63f"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b8dd7c2f9b46879",
            "route_table_id": "rtb-07cdf98b194106730",
            "subnet_id": "subnet-03e1cb05fecc053ec"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd0b3ffc91a26ada",
            "route_table_id": "rtb-04b2a54fa15a3435a",
            "subnet_id": "subnet-02226868444e7cfd2"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016d65c0eae8a12ef",
            "route_table_id": "rtb-04b2a54fa15a3435a",
            "subnet_id": "subnet-010c75a5cb162e0ce"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:security-group/sg-0f2818235299636fc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2818235299636fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mrolive-vpc-alb-sg",
            "name_prefix": "",
            "owner_id": "891376960967",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082c137d8bdade3e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:security-group/sg-092473d1409813d54",
            "description": "Default security group for mrolive-vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092473d1409813d54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mrolive-vpc-default-sg20241227193155178600000004",
            "name_prefix": "mrolive-vpc-default-sg",
            "owner_id": "891376960967",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mrolive-vpc-default-sg"
            },
            "tags_all": {
              "Name": "mrolive-vpc-default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-082c137d8bdade3e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:security-group/sg-0828b0d6ded6143a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0828b0d6ded6143a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "mrolive-vpc-ecs-sg",
            "name_prefix": "",
            "owner_id": "891376960967",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082c137d8bdade3e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:subnet/subnet-01f5ac8cc96fbd63f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f5ac8cc96fbd63f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376960967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mrolive-vpc-private-subnet-0"
            },
            "tags_all": {
              "Name": "mrolive-vpc-private-subnet-0"
            },
            "vpc_id": "vpc-082c137d8bdade3e0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:subnet/subnet-03e1cb05fecc053ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e1cb05fecc053ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376960967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mrolive-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "mrolive-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-082c137d8bdade3e0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:subnet/subnet-02226868444e7cfd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02226868444e7cfd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376960967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mrolive-vpc-public-subnet-0"
            },
            "tags_all": {
              "Name": "mrolive-vpc-public-subnet-0"
            },
            "vpc_id": "vpc-082c137d8bdade3e0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:subnet/subnet-010c75a5cb162e0ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010c75a5cb162e0ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376960967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mrolive-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "mrolive-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-082c137d8bdade3e0"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:vpc/vpc-082c137d8bdade3e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09bde3021231f1c1b",
            "default_route_table_id": "rtb-06d78c4c08383dcae",
            "default_security_group_id": "sg-0a9166e068347b522",
            "dhcp_options_id": "dopt-0380c1c87fe3895e2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-082c137d8bdade3e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d78c4c08383dcae",
            "owner_id": "891376960967",
            "tags": {
              "Name": "mrolive-vpc-vpc"
            },
            "tags_all": {
              "Name": "mrolive-vpc-vpc"
            }
          }
        }
      ]
    }
  ]
}